# clippets

./: .README-rst.utf-8.add  .README-rst.utf-8.add.spl  .coveragerc  .gitignore  .readthedocs.yaml  README.md  README.rst  clippets  cov.ini  mypy.ini  noxfile.py  pylintrc  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_win.txt  setup.cfg  snippets
docs/: .dict.utf-8.add  .dict.utf-8.add.spl  .gitignore  .index.rst.utf-8.add  .index.rst.utf-8.add.spl  Makefile  README.txt  conf.py  credits.txt  file_format.rst  index.rst  mk_readme.py  snippet_lexer.py
docs/getting-started/: .dict.utf-8.add  .linux-rst.utf-8.add.spl  .windows-rst.utf-8.add  .windows-rst.utf-8.add.spl  first-run.rst  linux.rst  main.rst  windows.rst
docs/getting-started/first-run/: basics.snip
docs/reference/: file_format.rst  main.rst
docs/reference/file_format/: intro.snip
docs/snippet-examples/file_format/: intro.snip
docs/user-guide/: .dict.utf-8.add  .dict.utf-8.add.spl  .groups-rst.utf-8.add.spl  .main-rst.utf-8.add  .main-rst.utf-8.add.spl  backups.rst  basics.rst  editing.rst  external-editor.rst  finding.rst  groups.rst  main.rst  moving.rst
docs/user-guide/basics/: change-detect.snip  common.inc  components.ovl  components.snip  editor.snip  group-mode.snip  keywords.snip  searching.snip
docs/user-guide/editing/: editing-keywords.snip  greyed-out.snip  group-context.snip  group-rename.snip  snippet-context.snip  snippet.inc  snippet.snip
docs/user-guide/groups/: all-folded.snip  folded.inc  folded.snip  group-mode.snip  para-fold.snip
docs/user-guide/moving/: group-move-mode.snip  group-move-subgroup.snip  moving.inc  snippet-move-mode.snip  snippet-place-holder.snip
src/clippets/: .help.txt.utf-8.add  abc.py  clippets.css  colors.py  core.py  dummy_editor.py  editor.py  help.txt  linux.py  markup.py  patches.py  platform.py  robot.py  snippets.py  tasks.py  text.py  widgets.py  win.py
src/snippets/: colors.py  core.py  help.md  help.txt  linux.py  markup.py  platform.py  snippets.css  snippets.py  widgets.py  win.py
stubs/: markdown_strings.pyi
tests/: .gitignore  conftest.py  edit_helper.py  fixtures.py  log.py  ruff.toml  runner.py  support.py  test_cat_attack.py  test_clipboard.py  test_editing.py  test_editing_meta.py  test_editor.py  test_filtering.py  test_help.py  test_kb_selection.py  test_keywords.py  test_load_save.py  test_misc_ui.py  test_monitor.py  test_moving.py  test_moving_groups.py  test_snapshots.py
tests/__snapshots__/: test_cat_attack.ambr  test_clipboard.ambr  test_editing.ambr  test_editor.ambr  test_filtering.ambr  test_help.ambr  test_kb_selection.ambr  test_keywords.ambr  test_misc_ui.ambr  test_monitor.ambr  test_moving.ambr  test_moving_groups.ambr
tests/output/: snapshot_report.html
tools/: pre-release-check.py
